# Cloud-MGR

./: Cargo.toml  README.md  README_en.md  build.rs
src/: app.rs  config.rs  downloader.rs  loading.rs  main.rs  mode.rs  network.rs  plugins.rs  source_selector.rs  utils.rs
src/ui/: manage_page.rs  market_page.rs  mod.rs  settings_page.rs
