[package]
name = "cloud-pe-plugin-market"
version = "0.1.0"
edition = "2021"
authors = ["NORMAL-EX (dddffgg)"]
build = "build.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures = "0.3"
dirs = "5.0"
rfd = "0.15"
dark-light = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"
chrono = "0.4"
bytes = "1.5"
percent-encoding = "2.3"
winreg = { version = "0.52", features = ["transactions"] }
registry = "1.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", 
    "winbase", 
    "fileapi", 
    "handleapi", 
    "winioctl", 
    "winnt", 
    "dwmapi",
    "processthreadsapi",
    "securitybaseapi"
] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_SystemInformation"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true